--- a/aws-app/src/styles/index.scss
+++ b/aws-app/src/styles/index.scss
@@ -1546,6 +1546,20 @@ input {
 	padding: 0 !important;
 	margin-top: 16px !important;
 }
+.single-loading-small {
+	width: 100% !important;
+	height: 80px !important;
+	padding: 0 !important;
+	margin-top: 16px !important;
+}
+
+.single-loading-big {
+	width: 100% !important;
+	height: 400px !important;
+	padding: 0 !important;
+	margin-top: 16px !important;
+}
+
 .loading {
 	display: flex;
 	gap: 24px;
@@ -1662,6 +1676,10 @@ input {
 	}
 }
 
+.dialog button {
+	z-index: 0;
+}
+
 .main-content-data-wrapper {
 	display: flex;
 	gap: 24px;
@@ -1669,7 +1687,7 @@ input {
 	.card {
 		padding: 16px;
 		border-radius: 16px;
-		width: 200px;
+		width: 25%;
 		height: 160px;
 		display: flex;
 		flex-direction: column;
@@ -1691,6 +1709,7 @@ input {
 	.additional-data {
 		padding: 16px;
 		border-radius: 16px;
+		width: 400px;
 		max-width: 400px;
 		.logo img {
 			width: 240px;
@@ -1701,6 +1720,24 @@ input {
 			padding: 8px 16px;
 			border-radius: 16px;
 		}
+	}
+}
+
+.stars {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	img {
+		width: 16px !important;
+		height: 16px;
+	}
+}
+
+.select-companies > div {
+	margin-top: 24px;
+	border-radius: 16px;
+	.css-13cymwt-control {
+		border-radius: 16px;
 	}
 }
 
@@ -1801,6 +1838,9 @@ input {
 }
 
 @media only screen and (max-width: 800px) {
+	.review-header {
+		display: flex;
+	}
 	.main-company-data .additional-data {
 		flex-direction: column;
 	}
@@ -1808,7 +1848,11 @@ input {
 		padding: 24px;
 	}
 	.main-content-data-wrapper {
-		flex-wrap: wrap;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		.card {
+			width: 100%;
+		}
 	}
 	.review {
 		flex-direction: column !important;
@@ -1822,7 +1866,7 @@ input {
 	}
 	.main-content-data-wrapper {
 		display: grid;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 1fr 1fr !important;
 		.card {
 			width: 100%;
 			h2 {
