--- a/aws-app/src/styles/index.css
+++ b/aws-app/src/styles/index.css
@@ -1703,6 +1703,9 @@ input {
   }
 }
 @media only screen and (max-width: 800px) {
+  .sidebar-skeleton {
+    display: none !important;
+  }
   .review-header {
     display: flex;
   }
