--- a/aws-app/src/styles/index.scss
+++ b/aws-app/src/styles/index.scss
@@ -1838,6 +1838,9 @@ input {
 }
 
 @media only screen and (max-width: 800px) {
+	.sidebar-skeleton {
+		display: none !important;
+	}
 	.review-header {
 		display: flex;
 	}
